   each other.

* Improvements
  * Added support for multiple injection specification for the same syscall,
    with when= specifications accounted independently and "last wins" strategy
    with respect to specific injection actions;  "none" pseudo-action added
    to prevent syscall injection in accordance with its syscall and when=
    specification.
  * Improved printing of syscall names in places where the associated
    AUDIT_ARCH_* value is present (ptrace PTRACE_GET_SYSCALL_INFO request,
    SIGSYS siginfo_t).
  * Implemented decoding of SECCOMP_GET_NOTIF_SIZES operation of seccomp
    syscall.
  * Implemented decoding of SECCOMP_* ioctl commands.
  * Implemented decoding of RTM_{NEW,DEL,GET}NEXTHOP NETLINK_ROUTE netlink
    messages.
  * Enhanced decoding of times syscall.

* Bug fixes

Noteworthy changes in release 5.14 (2021-09-02)
===============================================

* Improvements
  * Implemented decoding of memfd_secret and quotactl_fd syscalls,
    introduced in Linux 5.14.
  * Enhanced prctl syscall decoding.
  * Enhanced decoding of IFLA_* netlink attributes.
  * Enhanced decoding of MDBA_ROUTER_PATTR_* mdb router port netlink attributes.
  * Updated lists of BPF_*, IORING_*, MADV_*, MOUNT_ATTR_*, SCTP_*,
    and UFFD_* constants.
  * Updated lists of ioctl commands from Linux 5.14.

* Bug fixes
  * Fixed build using bionic libc.

Noteworthy changes in release 5.13 (2021-07-18)
===============================================

* Improvements
  * Print netlink data in a more structured way.
  * Implemented decoding of NT_PRSTATUS and NT_FPREGSET regsets
    of PTRACE_GETREGSET and PTRACE_SETREGSET requests.
  * Implemented decoding of regs argument of PTRACE_GETREGS, PTRACE_GETREGS64,
    PTRACE_SETREGS, PTRACE_SETREGS64, PTRACE_GETFPREGS, and PTRACE_SETFPREGS
    requests.
  * Implemented powerpc System Call Vectored ABI support.
  * Implemented decoding of landlock_add_rule, landlock_create_ruleset,